src/ui-components/select/Select.module.css
.select {
  width: 100%;
  /* min-width: 15ch; */
  /* max-width: 30ch; */
  border: 1px solid var(--button-border-color);
  border-radius: 4px;
  font-size: 14px;
  cursor: pointer;
  line-height: 1.1;
  background-color: #fff;
  display: flex;
  align-items: center;
  justify-content: space-between;
  position: relative;
}

.select:focus-within {
  outline: var(--button-border-focus-color) auto 1px;
}

.select::after {
  position: absolute;
  right: 15px;
  pointer-events: none;
  content: "";
  width: 0.8em;
  height: 0.5em;
  background-color: var(--button-border-color);
  clip-path: polygon(100% 0%, 0 0%, 50% 100%);
}

.select select {
  appearance: none;
  background-color: transparent;
  border: none;
  padding: 10px 15px;
  padding-right: 40px;
  margin: 0;
  width: 100%;
  font-family: inherit;
  font-size: inherit;
  cursor: inherit;
  line-height: inherit;
  outline: none;
}

